# daily

./: README.md
20230601/: [20230601]c语言编程规范——注释.md
20230816/: [20230816]Arm架构基本概念.md
20230829/: [20230829]C_Plus_Plus关于命令空间知识点.md  [20230829]C_Plus_Plus关于命名空间知识点.md  namespace.cpp  namespace.h
20230921/: [20230921]Ubuntu22.04修改用户登录背景图.md
20231010/: 1.文件系统.md  2.关于电脑安装多系统.md  3.GRUB启动加载器.md  3.GRUB启动加载器问题总结.md  [20231010]关于电脑安装多系统.md
20231017/: [20231017]Linux动态库路径.md
20231019/: [20231019]01_Linux中pkg-config的使用.md  [20231019]meson构建系统.md
20231027/: [20231027]调试工具学习.md  hello.d  test.md  test.stp
20231030/: [20231030]C调用c_plus_plus.md  [20231030]Linux串口开发.md
20231030/linux/: CMakeLists.txt  WzSerialPort.cpp  interface.cpp  interface.h  main.c  main.cpp
20231030/program/: a.out  usb_main.c
20231105/: [20231105]进程间内存共享.md  client  serve  serve.c
20231107/: [20231107]grep_ps_top命令.md
20231108/: [20231108]Ubuntu更新时间.md
20231109/: [20231109]github个人主页.md  github个人主页.md
20231109/my-blog/: _config.yml
20231109/my-blog/_posts/: 2023-11-11-Linux串口开发.md  2023-11-11-welcome-to-jekyll.markdown
20231110/: NVIDIA显卡安装.md  Ubuntu美化.md  搜狗输入法安装.md
